# moonshine

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  PR_DESCRIPTION.md  Package.swift  README.md  TRAINING.md  benchmark_timestamps.py  build.gradle.kts  ci_test.py  export_decoder_with_attention.py  gradle.properties  settings.gradle.kts  setup.py  test_python_api.py  test_swift_api.swift  test_word_timestamps_onnx.py  word_timestamps.py  word_timestamps_v2.py
core/: .banned-constructs-allowlist  .clang-tidy  .clang-tidy-baseline  CMakeLists.txt  STYLE_GUIDE.md  benchmark.cpp  gemma-embedding-model.cpp  intent-recognizer-test.cpp  intent-recognizer.cpp  intent-recognizer.h  mic-transcriber.cpp  module.modulemap  moonshine-c-api-memory-test.cpp  moonshine-c-api-test.cpp  moonshine-c-api.cpp  moonshine-c-api.h  moonshine-cpp-test.cpp  moonshine-cpp.h  moonshine-download-smoke.cpp  moonshine-model-catalog.cpp  moonshine-model-catalog.h  moonshine-model.cpp  moonshine-model.h  moonshine-streaming-model.cpp  moonshine-streaming-model.h  moonshine-test-v2.cpp  moonshine-test.c  moonshine.cpp  moonshine.h  online-clusterer-test.cpp  online-clusterer.cpp  online-clusterer.h  resampler-test.cpp  resampler.cpp  silero-vad.cpp  silero-vad.h  speaker-diarizer.cpp  speaker-diarizer.h  speaker-embedding-model.cpp  speaker-embedding-model.h  (+23 more)
core/bin-tokenizer/: CMakeLists.txt  bin-tokenizer-test.cpp  bin-tokenizer.cpp  bin-tokenizer.h
core/cpp-annote/: README.md
core/cpp-annote/src/: clustering_vbx.cpp  community1_cpp_annote_embedded.cpp  community1_ort_embedded.cpp  cpp-annote-engine.h  cpp-annote-streaming.cpp  cpp-annote-streaming.h  cpp-annote.cpp  plda_vbx.cpp  plda_vbx.h
core/moonshine-tts/: CMakeLists.txt
core/moonshine-tts/cmake/: moonshine-tts-onnxruntime.cmake
core/moonshine-tts/data/: README.md
core/moonshine-tts/src/: file-information.cpp  file-information.h  g2p-path.h  g2p-word-log.h  ipa-postprocess.cpp  ipa-postprocess.h  json-config.cpp  json-config.h  moonshine-asset-catalog.cpp  moonshine-asset-catalog.h  moonshine-g2p-options.cpp  moonshine-g2p-options.h  moonshine-g2p.cpp  moonshine-g2p.h  moonshine-tts-options.cpp  moonshine-tts-options.h  moonshine-tts.cpp  moonshine-tts.h  ort-onnx-external-data.cpp  ort-onnx-external-data.h  ort-session-options.cpp  ort-session-options.h  piper-tts.cpp  piper-tts.h  piper-voice-catalog.cpp  piper-voice-catalog.h  rule-based-g2p-factory.cpp  rule-based-g2p-factory.h  rule-based-g2p.h  text-normalize.cpp  text-normalize.h  utf8-utils.cpp  utf8-utils.h  zipvoice-custom-ops.cpp  zipvoice-custom-ops.h  zipvoice-mel.cpp  zipvoice-mel.h  zipvoice-tts.cpp  zipvoice-tts.h  zipvoice-voices-data.cpp  (+2 more)
core/moonshine-tts/tests/: arabic-rule-g2p-test.cpp  chinese-rule-g2p-test.cpp  chinese-tok-pos-onnx-test.cpp  cmudict-tsv-test.cpp  dutch-rule-g2p-test.cpp  english-hand-oov-test.cpp  english-rule-g2p-test.cpp  file-information-test.cpp  french-rule-g2p-test.cpp  german-rule-g2p-test.cpp  heteronym-context-test.cpp  hindi-rule-g2p-test.cpp  ipa-postprocess-test.cpp  italian-rule-g2p-test.cpp  japanese-onnx-g2p-test.cpp  japanese-tok-pos-onnx-test.cpp  json-config-test.cpp  korean-rule-g2p-test.cpp  korean-tok-pos-onnx-test.cpp  moonshine-g2p-options-test.cpp  moonshine-tts-options-test.cpp  moonshine-tts-speed-test.cpp  onnx-g2p-smoke-test.cpp  portuguese-rule-g2p-test.cpp  rule-g2p-test-support.h  russian-rule-g2p-test.cpp  spanish-rule-g2p-test.cpp  text-normalize-test.cpp  turkish-rule-g2p-test.cpp  ukrainian-rule-g2p-test.cpp  utf8-utils-test.cpp  vietnamese-rule-g2p-test.cpp  zipvoice-tts-test.cpp
core/moonshine-tts/tools/: arabic-rule-g2p-cli.cpp  (+16 more)
core/moonshine-utils/: CMakeLists.txt  debug-utils-test.cpp  debug-utils.cpp  debug-utils.h  file-utils-test.cpp  file-utils.cpp  file-utils.h  json-utils.cpp  json-utils.h  string-utils-test.cpp  string-utils.cpp  string-utils.h  test-utils.h
core/ort-utils/: CMakeLists.txt  moonshine-ort-allocator.cpp  moonshine-ort-allocator.h  moonshine-tensor-view.cpp  moonshine-tensor-view.h  moonshine-tensor.cpp  moonshine-tensor.h  ort-utils-cxx.h  ort-utils-ep-test.cpp  ort-utils-ep.cpp  ort-utils-test.cpp  ort-utils.cpp  ort-utils.h
core/reliability/: .gitignore  CMakeLists.txt  fuzz-bin-tokenizer.cpp  fuzz-resampler.cpp  fuzz-string-utils.cpp  fuzz-tensor-view.cpp  fuzz-wav-pcm.cpp  sanitizer-ignorelist.txt  tsan-suppressions.txt
micro/: CMakeLists.txt  README.md
micro/cmake/: CppTinyTests.cmake  MoonshineMicroTests.cmake
micro/example-rp2350/: CMakeLists.txt  memmap_dualcore_stack.ld
micro/feature-generation/: CMakeLists.txt  README.md
micro/g2p/: CMakeLists.txt
micro/klatt-tts/: CMakeLists.txt  README.md
micro/models/: README.md  spelling_cnn_letters_digits_mel.shrunk.onnx  spelling_cnn_letters_digits_mel_int8.tflite  spelling_cnn_letters_digits_meta.json  spelling_cnn_mel.onnx  spelling_cnn_mel.shrunk.onnx  spelling_cnn_mel_fp32.tflite  spelling_cnn_mel_int8.tflite  spelling_cnn_mel_int8_meta.json  spelling_cnn_meta.json  tinyvad_cnn_speech_mel.onnx  tinyvad_cnn_speech_mel_fp32.tflite  tinyvad_cnn_speech_mel_head16.tflite  tinyvad_cnn_speech_meta.json
micro/neural-tts/: CMakeLists.txt  README.md
micro/stt/: CMakeLists.txt  README.md
micro/stt-training/: .gitignore  README.md  config.sh  requirements.txt  run_all.sh  words.txt
micro/test-support/: run_micro_test.sh
micro/tts/: CMakeLists.txt  README.md
micro/vad/: CMakeLists.txt  README.md
wasm/: .npmignore  CMakeLists.txt  README.md  moonshine-embind.cpp  package-lock.json  package.json  tsconfig.json  typedoc.json
wasm/src/: asset-downloader.ts  dialog-flow.ts  enums.ts  errors.ts  events.ts  grapheme-to-phonemizer.ts  index.ts  intent-recognizer.ts  microphone-transcriber.ts  module.ts  stream.ts  text-to-speech.ts  transcriber.ts  types.ts
wasm/tests/: asset-downloader.test.mjs  dialog-flow.test.mjs  enums.test.mjs  errors.test.mjs  events.test.mjs  grapheme-to-phonemizer.test.mjs  helpers.mjs  intent-recognizer.test.mjs  smoke.test.mjs  text-to-speech.test.mjs  transcriber.test.mjs
(+671 files in other folders)
